--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "deep-email-validator",
-  "version": "0.1.22",
+  "name": "@MavaApp/email-validator",
+  "version": "0.0.1",
   "files": [
     "dist/**/*"
   ],
   "description": "Validates emails based on regex, common typos, disposable email blacklists, DNS records and SMTP server response.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mfbx9da4/deep-email-validator"
-  },
-  "author": "David Alberto Adler",
+  "author": "",
   "license": "MIT",
   "keywords": [
     "email-validation",
