--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build package
-        run: npm run compile
+        run: npm run build
 
       - name: Publish to GitHub Packages
         run: npm publish
